--- a/packages/yike-design/src/styles/tokens/color.scss
+++ b/packages/yike-design/src/styles/tokens/color.scss
@@ -1,1 +1,10 @@
-// stylelint-disable
+$color-primary: var(--yike-color-primary);
+$color-danger: var(--yike-color-danger);
+$color-success: var(--yike-color-success);
+$color-warning: var(--yike-color-warning);
+$color-href: var(--yike-color-href);
+$color-text: var(--yike-color-text);
+$color-text-secondary: var(--yike-color-text-secondary);
+$color-text-tertiary: var(--yike-color-text-tertiary);
+$color-text-disabled: var(--yike-color-text-disabled);
+$color-outlined: var(--yike-outlined);
