--- a/packages/yike-design/src/styles/tokens/index.scss
+++ b/packages/yike-design/src/styles/tokens/index.scss
@@ -9,3 +9,6 @@ $shape-corner-medium: 8px;
 $shape-corner-large: 12px;
 $shape-corner-extra-large: 20px;
 $shape-corner-full: 999px;
+$state-hovered: 0.12;
+$state-pressed: 0.24;
+$state-disabled: 0.3;
