--- a/packages/yike-design/src/styles/theme/index.scss
+++ b/packages/yike-design/src/styles/theme/index.scss
@@ -1,11 +1,3 @@
-@media (prefers-color-scheme: light) {
-  @import './light';
-}
-
-@media (prefers-color-scheme: dark) {
-  @import './dark';
-}
-
-html {
-  -webkit-tap-highlight-color: transparent;
-}
+@import './dark';
+@import './light';
+@import './reset';
