fix: style tokens

--- a/packages/yike-design/src/styles/tokens/index.scss
+++ b/packages/yike-design/src/styles/tokens/index.scss
@@ -9,6 +9,6 @@ $shape-corner-medium: 8px;
 $shape-corner-large: 12px;
 $shape-corner-extra-large: 20px;
 $shape-corner-full: 999px;
-$state-hovered: 0.12;
-$state-pressed: 0.24;
-$state-disabled: 0.3;
+$state-hovered-alpha: 0.08;
+$state-pressed-alpha: 0.12;
+$state-disabled-alpha: 0.3;
