refactor: adjust style tokens

--- a/packages/yike-design/src/styles/tokens/index.scss
+++ b/packages/yike-design/src/styles/tokens/index.scss
@@ -9,6 +9,7 @@ $shape-corner-medium: 8px;
 $shape-corner-large: 12px;
 $shape-corner-extra-large: 20px;
 $shape-corner-full: 999px;
-$state-hovered-alpha: 0.08;
-$state-pressed-alpha: 0.12;
+$state-enabled-alpha: 0.08;
+$state-hovered-alpha: 0.12;
+$state-pressed-alpha: 0.24;
 $state-disabled-alpha: 0.3;
