--- a/packages/yike-design/src/components/Button/style/Button.scss
+++ b/packages/yike-design/src/components/Button/style/Button.scss
@@ -7,22 +7,34 @@
   align-items: center;
   justify-content: center;
   padding: 6px 16px;
+  margin-right: 16px;
+  margin-bottom: 16px;
   color: white;
   border: 1px solid transparent;
   outline: none;
   transition: all 0.3s;
 
   &--round {
-    border-radius: 20px !important;
+    border-radius: $shape-corner-extra-large !important;
   }
 
   &--circle {
     padding: 0 !important;
-    border-radius: 20px !important;
+    border-radius: $shape-corner-extra-large !important;
   }
 
   &--square {
     padding: 0 !important;
+  }
+
+  &--disabled {
+    cursor: not-allowed;
+    opacity: 0.56;
+  }
+
+  &--long {
+    display: block;
+    width: 100%;
   }
 }
 
@@ -60,6 +72,31 @@
   }
 }
 
+.yk-button--secondary {
+  background-color: rgb(0 0 0 / 8%);
+
+  &:not(:disabled):hover {
+    background-color: rgb(0 0 0 / 12%);
+  }
+
+  &:not(:disabled):active {
+    background-color: rgb(0 0 0 / 16%);
+  }
+}
+
+.yk-button--outline {
+  background-color: transparent;
+  border-color: rgb(0 0 0 / 16%);
+
+  &:not(:disabled):hover {
+    background-color: rgb(0 0 0 / 8%);
+  }
+
+  &:not(:disabled):active {
+    background-color: rgb(0 0 0 / 12%);
+  }
+}
+
 // secondary type
 /* stylelint-disable-next-line scss/at-mixin-pattern */
 @mixin buttonSecondaryOutlineBGC($status, $color_) {
@@ -90,10 +127,10 @@
   }
 }
 
-@include buttonSize(s, 4px, 24px, 12px, 8px);
-@include buttonSize(m, 4px, 32px, 14px, 16px);
-@include buttonSize(l, 8px, 36px, 14px, 16px);
-@include buttonSize(xl, 8px, 48px, 16px, 24px);
+@include buttonSize(s, $shape-corner-small, 24px, 12px, 8px);
+@include buttonSize(m, $shape-corner-small, 32px, 14px, 16px);
+@include buttonSize(l, $shape-corner-medium, 36px, 14px, 16px);
+@include buttonSize(xl, $shape-corner-medium, 48px, 16px, 24px);
 @include buttonType(primary, white);
 @include buttonType(secondary, black);
 @include buttonType(outline, black);
@@ -101,7 +138,7 @@
 @include buttonPrimaryBGC(danger, $color-danger);
 @include buttonPrimaryBGC(success, $color-success);
 @include buttonPrimaryBGC(warning, $color-warning);
-@include buttonSecondaryOutlineBGC(primary, black);
+@include buttonSecondaryOutlineBGC(primary, #2b5aed);
 @include buttonSecondaryOutlineBGC(danger, #fa5247);
 @include buttonSecondaryOutlineBGC(success, #1fb4a2);
 @include buttonSecondaryOutlineBGC(warning, #ffaa1a);
