--- a/packages/yike-design/src/components/Space/style/Space.scss
+++ b/packages/yike-design/src/components/Space/style/Space.scss
@@ -1,1 +1,30 @@
 /* stylelint-disable-next-line no-empty-source */
+@import '../../../styles/tokens/index';
+
+.yk-space {
+  display: inline-flex;
+}
+
+.demo-box-1 {
+  width: 50px;
+  height: 50px;
+  background-color: $color-primary;
+}
+
+.demo-box-2 {
+  width: 70px;
+  height: 70px;
+  background-color: $color-primary;
+}
+
+.demo-box-3 {
+  width: 90px;
+  height: 90px;
+  background-color: $color-primary;
+}
+
+.demo-box-4 {
+  width: 250px;
+  height: 90px;
+  background-color: $color-primary;
+}
