feat(docs): add demo code icons

--- a/docs/src/app/globals.scss
+++ b/docs/src/app/globals.scss
@@ -7,6 +7,9 @@
   --fontcolorm: rgb(30 32 37 / 80%);
   --bgcolorm: #f6f6f8;
   --linecolorm: #e8e8e8;
+  --bgcolors: #f3f3f4;
+  --fontcolorl: rgb(30 32 37 / 100%);
+  --bgcolorl: #fff;
 }
 
 :root.dark {
