feat(button): add icon button and demo

--- a/packages/yike-design/src/components/Button/style/Button.scss
+++ b/packages/yike-design/src/components/Button/style/Button.scss
@@ -34,6 +34,10 @@
     display: block;
     width: 100%;
   }
+
+  svg {
+    margin-right: 4px;
+  }
 }
 
 /* stylelint-disable-next-line scss/at-mixin-pattern */
