feat: add typography style

--- a/packages/yike-design/src/styles/theme/dark.scss
+++ b/packages/yike-design/src/styles/theme/dark.scss
@@ -3,7 +3,7 @@
   --yike-color-danger: #df4d43;
   --yike-color-success: #3dbaab;
   --yike-color-warning: #fbad3b;
-  --yike-color-href: #308ce1;
+  --yike-color-link: #308ce1;
   --yike-color-text: rgb(255 255 255 / 90%);
   --yike-color-text-secondary: rgb(255 255 255 / 70%);
   --yike-color-text-tertiary: rgb(255 255 255 / 45%);
