--- a/packages/yike-design/src/styles/tokens/index.scss
+++ b/packages/yike-design/src/styles/tokens/index.scss
@@ -1,6 +1,6 @@
 @forward './color.scss';
 @forward './motion.scss';
-@forward './typography.scss';
+@forward './text.scss';
 
 $prefix: yike;
 $shape-corner-none: 0;
