--- a/packages/yike-design/src/styles/tokens/color.scss
+++ b/packages/yike-design/src/styles/tokens/color.scss
@@ -1,10 +1,82 @@
+// ------------ blue ------------
+$color-blue: #2b5aed;
+$color-blue-1: rgba($color-blue, 0.08);
+$color-blue-2: rgba($color-blue, 0.12);
+$color-blue-3: rgba($color-blue, 0.16);
+$color-blue-4: rgba($color-blue, 0.24);
+$color-blue-5: rgba($color-blue, 0.32);
+$color-blue-6: #436ff8;
+$color-blue-7: $color-blue;
+$color-blue-8: #2753da;
+$color-blue-9: #244cc7;
+$color-blue-10: #1d3da1;
+
+// ------------ red ------------
+$color-red: #fa5247;
+$color-red-1: rgba($color-red, 0.08);
+$color-red-2: rgba($color-red, 0.12);
+$color-red-3: rgba($color-red, 0.16);
+$color-red-4: rgba($color-red, 0.24);
+$color-red-5: rgba($color-red, 0.32);
+$color-red-6: #fb675d;
+$color-red-7: $color-red;
+$color-red-8: #e64b41;
+$color-red-9: #d2453c;
+$color-red-10: #aa3830;
+
+// ------------ green ------------
+$color-green: #1fb4a2;
+$color-green-1: rgba($color-green, 0.08);
+$color-green-2: rgba($color-green, 0.12);
+$color-green-3: rgba($color-green, 0.16);
+$color-green-4: rgba($color-green, 0.24);
+$color-green-5: rgba($color-green, 0.32);
+
+// ------------ yellow ------------
+$color-yellow: #ffaa1a;
+$color-yellow-1: rgba($color-yellow, 0.08);
+$color-yellow-2: rgba($color-yellow, 0.12);
+$color-yellow-3: rgba($color-yellow, 0.16);
+$color-yellow-4: rgba($color-yellow, 0.24);
+$color-yellow-5: rgba($color-yellow, 0.32);
+
+// ------------ neutral colors ------------
+
+//            ------ gray ------
+$color-gray: #1e2025;
+$color-gray-1: rgba($color-gray, 0.08);
+$color-gray-2: rgba($color-gray, 0.12);
+$color-gray-3: rgba($color-gray, 0.16);
+$color-gray-4: rgba($color-gray, 0.24);
+$color-gray-5: rgba($color-gray, 0.32);
+$color-gray-6: rgba($color-gray, 0.48);
+$color-gray-7: rgba($color-gray, 0.64);
+$color-gray-8: rgba($color-gray, 0.72);
+$color-gray-9: rgba($color-gray, 0.88);
+
+//            ------ white ------
+$color-white: #fff;
+
+// ------------ functional color ------------
 $color-primary: var(--yike-color-primary);
 $color-danger: var(--yike-color-danger);
 $color-success: var(--yike-color-success);
 $color-warning: var(--yike-color-warning);
-$color-href: var(--yike-color-href);
-$color-text: var(--yike-color-text);
-$color-text-secondary: var(--yike-color-text-secondary);
-$color-text-tertiary: var(--yike-color-text-tertiary);
-$color-text-disabled: var(--yike-color-text-disabled);
-$color-outlined: var(--yike-color-outlined);
+$color-link: var(--yike-color-link);
+
+// ------------ background color ------------
+$color-bg-m: #f6f6f8;
+$color-bg-s: #f0f0f1;
+$color-bg-ss: #e8e9eb;
+$color-bg-l: $color-white;
+
+// ------------ text color ------------
+$color-text-l: $color-gray;
+$color-text-m: $color-gray-8;
+$color-text-s: $color-gray-6;
+$color-text-ss: $color-gray-5;
+
+// ------------ line color ------------
+$color-line-s: $color-gray-1;
+$color-line-m: $color-gray-3;
+$color-line-l: $color-gray-4;
