feat: add theme toggle button

--- a/packages/yike-design/src/styles/theme/dark.scss
+++ b/packages/yike-design/src/styles/theme/dark.scss
@@ -1,4 +1,4 @@
-:root.dark {
+:root[data-theme='dark'] {
   --yike-color-primary: #3575f6;
   --yike-color-danger: #df4d43;
   --yike-color-success: #3dbaab;
