fix: fix Text ellipsis bug

--- a/packages/yike-design/src/components/Typography/style/Typography.scss
+++ b/packages/yike-design/src/components/Typography/style/Typography.scss
@@ -22,6 +22,11 @@
   }
 }
 
+span.yk-typography--ellipsis {
+  display: inline-block;
+  max-width: 100%;
+}
+
 .yk-typography {
   &--default {
     color: $text-color-l;
