feat(Button): update button style

--- a/packages/yike-design/src/styles/color/color.scss
+++ b/packages/yike-design/src/styles/color/color.scss
@@ -74,3 +74,4 @@ $color-white-6: rgba($color-white, 0.48);
 $color-white-7: rgba($color-white, 0.64);
 $color-white-8: rgba($color-white, 0.72);
 $color-white-9: rgba($color-white, 0.88);
+$color-white-10: $color-white;
