--- a/packages/yike-design/src/styles/tokens/color.scss
+++ b/packages/yike-design/src/styles/tokens/color.scss
@@ -4,6 +4,19 @@ $yike-success: var(--yike-success);
 $yike-warning: var(--yike-warning);
 $yike-link: var(--yike-link);
 
+// ------------ neutral color ------------
+$neutral-color: var(--yike-neutral-color);
+$neutral-color-1: var(--yike-neutral-color-1);
+$neutral-color-2: var(--yike-neutral-color-2);
+$neutral-color-3: var(--yike-neutral-color-3);
+$neutral-color-4: var(--yike-neutral-color-4);
+$neutral-color-5: var(--yike-neutral-color-5);
+$neutral-color-6: var(--yike-neutral-color-6);
+$neutral-color-7: var(--yike-neutral-color-7);
+$neutral-color-8: var(--yike-neutral-color-8);
+$neutral-color-9: var(--yike-neutral-color-9);
+$neutral-color-10: var(--yike-neutral-color-10);
+
 // ------------ functional color ------------
 $primary-color: rgb($yike-primary);
 $danger-color: rgb($yike-danger);
