--- a/packages/yike-design/src/components/switch/style/index.scss
+++ b/packages/yike-design/src/components/switch/style/index.scss
@@ -73,8 +73,8 @@
 }
 
 .yk-switch--loading {
-  cursor: not-allowed;
-  opacity: 0.72 !important;
+  cursor: default;
+  opacity: 0.72;
 
   svg {
     width: 16px;
