--- a/packages/yike-design/src/components/pagination/PageJump/index.scss
+++ b/packages/yike-design/src/components/pagination/PageJump/index.scss
@@ -1,4 +1,4 @@
-.pagination-show-jump {
+.yk-pagination-pagejump {
   display: inline-flex;
   display: flex;
   align-items: center;
@@ -7,12 +7,12 @@
   height: 36px;
   font-size: 14px;
 
-  &-title {
+  &__title {
     padding: 0 10px;
     line-height: 1;
   }
 
-  &-container {
+  &__container {
     width: 100px;
     height: 100%;
     padding: 0 12px;
@@ -31,7 +31,7 @@
       border-color: #2b5aed;
     }
 
-    &-input {
+    &__input {
       width: 100%;
       height: 100%;
       background-color: transparent;
@@ -44,13 +44,5 @@
         background-color: #f7f7f7;
       }
     }
-  }
-
-  &-separator {
-    line-height: 40px;
-  }
-
-  &-total {
-    line-height: 40px;
   }
 }
